sumo/tests/traci/MoveNode/InvalidPositionFormat/options.traci
sumo.exe --no-step-log --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8826 --netstate-dump netstate_dump.xml TraCITestClient.exe -def movenode_invalidpos.prog -p 8826 -h localhost -o testclient_out.txt
